2010-02-11  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (mem_loc_descriptor) <case MEM>: Use DW_OP_deref_size
	if MEM's mode size isn't DWARF2_ADDR_SIZE.
	(mem_loc_descriptor) <do_scompare>: Allow also VOIDmode arguments.
	Optimize eq/ne comparisons when both arguments are known to be
	zero-extended.
	(mem_loc_descriptor) <do_ucompare>: Allow also VOIDmode arguments.
	Don't mask operands unnecessarily if they are known to be already
	zero-extended.

2010-02-10  Vladimir Makarov  <vmakarov@redhat.com>

	* ira-conflicts.c (add_insn_allocno_copies): Use find_reg_note
	instead of loop.

2010-02-10  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43017
	* tree-vrp.c (vrp_int_const_binop): Trust int_const_binop
	for wrapping signed arithmetic.

2010-02-10  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43010
	* dwarf2out.c (retry_incomplete_types): Don't call gen_type_die
	if no debug info should be emitted for it.

2010-02-10  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh.c (find_barrier): Skip call insn with a REG_EH_REGION
	note when flag_exceptions is set.

2010-02-10  Duncan Sands  <baldrick@free.fr>

	* Makefile.in (PLUGIN_HEADERS): Add debug.h.

2010-02-10  Richard Guenther  <rguenther@suse.de>

	PR c/43007
	* tree.c (get_unwidened): Handle constants.
	* convert.c (convert_to_integer): Handle TRUNC_DIV_EXPR.

2010-02-10  Martin Jambor  <mjambor@suse.cz>

	PR lto/42985
	* ipa-prop.c (ipa_update_after_lto_read): Count parameters and
	check for variable argument counts independently.

2010-02-10  Christian Bruel  <christian.bruel@st.com>

	PR target/42841
	* config/sh/sh.c (find_barrier): Increase length for non delayed
	conditional branches.
	
2010-02-10  Christian Bruel  <christian.bruel@st.com>

	* config/sh/sh.c (find_barrier): Don't emit a CP inside the GP setting.
	
2010-02-10  Jakub Jelinek  <jakub@redhat.com>

	* builtins.c (set_builtin_user_assembler_name): Also handle
	ffs if int is smaller than word.
