@@ -1,5 +1,10 @@
 2010-02-11  Jakub Jelinek  <jakub@redhat.com>
 
+	* reload1.c (eliminate_regs_1): If insn is DEBUG_INSN, avoid any
+	modifications outside of the DEBUG_INSN.  Accept CLOBBERs inside
+	of DEBUG_INSNs.
+	(eliminate_regs_in_insn): Eliminate regs even in DEBUG_INSNs.
+
 	* dwarf2out.c (mem_loc_descriptor) <case MEM>: Use DW_OP_deref_size
 	if MEM's mode size isn't DWARF2_ADDR_SIZE.
 	(mem_loc_descriptor) <do_scompare>: Allow also VOIDmode arguments.
